--- a/index.html
+++ b/index.html
@@ -62,11 +62,21 @@
                 <li class="skills-item">Teamwork</li>
             </ul>
         </section>
-        <!--<section class="widget">
+        <section class="skills">
+            <h2 class="skills-title">
+                Languages
+            </h2>
+            <ul class="skills-list">
+                <li class="skills-item">Russian native </li>
+                <li class="skills-item">English B1 in progress</li>
+
+            </ul>
+        </section>
+        <section class="widget">
             <a class="widget-link"
                href="https://drive.google.com/file/d/1ezO_NCHAs7WnkWGLByvOb64BA9NjXHcd/view?usp=sharing" download>Download
                 resume</a>
-        </section>-->
+        </section>
     </aside>
     <div class="right-side">
         <section class="bio">
@@ -78,7 +88,7 @@
                 Hello, I'm a person who engaged in programming. I'm front-end developer
                 who has a results-focused attitude to creating SPA with React/Redux/Typescript.
                 Now I'm improving my skills in this direction and expanding them with new
-                technologies. And also i have an interest to improve my English. I spend my
+                technologies. And also I have an interest to improve my English. I spend my
                 leisure time on Codewars or speaking with English speakers.
                 Open to your suggestions.
             </p>
@@ -95,11 +105,11 @@
                         TODO List on GitHub
                     </a>
                 </li>
-                <li>
+<!--                <li>-->
 <!--                    <a href="http://socialnetwork.api.tilda.ws/page21911342.html" class="projects-link">-->
 <!--                        Social Network on GitHub-->
 <!--                    </a>-->
-                </li>
+<!--                </li>-->
 
             </ol>
         </section>
