--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="container">
     <aside class="left-side">
         <img
-                src="./images/photo.jpg"
+                src="./images/photo1.jpg"
                 alt="My Photo"
                 width="370"
                 class="photo"
