--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
                         TODO List on GitHub
                     </a>
                 </li>
+
+                <li>
+                    <a href="https://github.com/mazurenka/andrej3824">
+                        <!--<a href="http://socialnetwork.api.tilda.ws/page21911342.html" class="projects-link">-->
+                        Social Network on GitHub
+                    </a>
+                </li>
+
 <!--                <li>-->
 <!--                    <a href="http://socialnetwork.api.tilda.ws/page21911342.html" class="projects-link">-->
 <!--                        Social Network on GitHub-->
