--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                 <li class="skills-item">Material UI/Ant Design</li>
                 <li class="skills-item">Unit Tests/Storybook</li>
                 <li class="skills-item">Axios/Rest API</li>
+                <li class="skills-item">SPA</li>
+                <li class="skills-item">TDD</li>
                 <li class="skills-item">Git</li>
             </ul>
         </section>
@@ -72,11 +74,11 @@
 
             </ul>
         </section>
-        <section class="widget">
-            <a class="widget-link"
-               href="https://drive.google.com/file/d/1n88VY50iAOBmUn_6EcyM5_WGuGXcxAma/view?usp=sharing" download>Download
-                resume</a>
-        </section>
+<!--        <section class="widget">-->
+<!--            <a class="widget-link"-->
+<!--               href="https://drive.google.com/file/d/1n88VY50iAOBmUn_6EcyM5_WGuGXcxAma/view?usp=sharing" download>Download-->
+<!--                resume</a>-->
+<!--        </section>-->
     </aside>
     <div class="right-side">
         <section class="bio">
@@ -101,23 +103,15 @@
 
                 <li>
                     <a href="https://github.com/mazurenka/ToDoDim.git">
-                    <!--<a href="http://socialnetwork.api.tilda.ws/page21911342.html" class="projects-link">-->
                         TODO List on GitHub
                     </a>
                 </li>
 
                 <li>
                     <a href="https://github.com/mazurenka/andrej3824">
-                        <!--<a href="http://socialnetwork.api.tilda.ws/page21911342.html" class="projects-link">-->
                         Social Network on GitHub
                     </a>
                 </li>
-
-<!--                <li>-->
-<!--                    <a href="http://socialnetwork.api.tilda.ws/page21911342.html" class="projects-link">-->
-<!--                        Social Network on GitHub-->
-<!--                    </a>-->
-<!--                </li>-->
 
             </ol>
         </section>
