--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2 class="contacts-title">Contacts</h2>
             <ul class="contacts-list">
                 <li class="contacts-item">
-                    Phone:
+                    Phone, WhatsApp, Viber, Telegram:
                     <a href="tel:+48796479716" class="contacts-link"
                     >+48 796 479 716</a
                     >
