--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             </h3>
             <p class="jobs-time">August 2016 - October 2020</p>
             <ul class="experience">
-                <li class="experience-item">ABB, Hager, GIRA, Legrand, Casambi, Schneider Electric</li>
+                <li class="experience-item">ABB, Jung, Berker, Hager, GIRA, Legrand, Casambi, Schneider Electric</li>
                 <li>
                     <a href="https://instagram.com/light_electro_master/" class="projects-link">
                         Instagram
