--- a/index.html
+++ b/index.html
@@ -69,16 +69,16 @@
                 Languages
             </h2>
             <ul class="skills-list">
-                <li class="skills-item">Russian native </li>
+                <li class="skills-item">Russian native</li>
                 <li class="skills-item">English B1 in progress</li>
 
             </ul>
         </section>
-<!--        <section class="widget">-->
-<!--            <a class="widget-link"-->
-<!--               href="https://drive.google.com/file/d/1n88VY50iAOBmUn_6EcyM5_WGuGXcxAma/view?usp=sharing" download>Download-->
-<!--                resume</a>-->
-<!--        </section>-->
+        <!--        <section class="widget">-->
+        <!--            <a class="widget-link"-->
+        <!--               href="https://drive.google.com/file/d/1n88VY50iAOBmUn_6EcyM5_WGuGXcxAma/view?usp=sharing" download>Download-->
+        <!--                resume</a>-->
+        <!--        </section>-->
     </aside>
     <div class="right-side">
         <section class="bio">
@@ -102,7 +102,7 @@
             <ol>
 
                 <li>
-                    <a href="https://github.com/mazurenka/ToDoDim.git">
+                    <a href="https://github.com/mazurenka/todolistWork-master">
                         TODO List on GitHub
                     </a>
                 </li>
