--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </ul>
 
             <h3 class="jobs-occupation">
-                Electrical Engineer at <span class="accent">Centrsvet.by</span>
+                Electrical Chief Engineer and Lighting Application Specialist at <span class="accent">Centrsvet.by</span>
             </h3>
             <p class="jobs-time">August 2016 - October 2020</p>
             <ul class="experience">
