--- a/index.html
+++ b/index.html
@@ -70,15 +70,10 @@
             </h2>
             <ul class="skills-list">
                 <li class="skills-item">Russian native</li>
+                <li class="skills-item">Polish A1 in progress</li>
                 <li class="skills-item">English B1 in progress</li>
-
             </ul>
         </section>
-        <!--        <section class="widget">-->
-        <!--            <a class="widget-link"-->
-        <!--               href="https://drive.google.com/file/d/1n88VY50iAOBmUn_6EcyM5_WGuGXcxAma/view?usp=sharing" download>Download-->
-        <!--                resume</a>-->
-        <!--        </section>-->
     </aside>
     <div class="right-side">
         <section class="bio">
@@ -145,7 +140,8 @@
             </ul>
 
             <h3 class="jobs-occupation">
-                Lighting Application Specialist and Chief Electrical Engineer at <span class="accent">Centrsvet.by</span>
+                Lighting Application Specialist and Chief Electrical Engineer at <span
+                    class="accent">Centrsvet.by</span>
             </h3>
             <p class="jobs-time">August 2016 - October 2020</p>
             <ul class="experience">
