--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <ul class="skills-list">
                 <li class="skills-item">Russian native</li>
                 <li class="skills-item">Polish A1 in progress</li>
-                <li class="skills-item">English B1 in progress</li>
+                <li class="skills-item">English A2 in progress</li>
             </ul>
         </section>
     </aside>
