--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@
                 Hello, I'm a person who engaged in programming. I'm front-end developer
                 who has a results-focused attitude to creating SPA with React/Redux/Typescript.
                 Now I'm improving my skills in this direction and expanding them with new
-                technologies. And also I have an interest to improve my English. I spend my
-                leisure time on Codewars or speaking with English speakers.
+                technologies. And also I have an interest to improve my English.
                 Open to your suggestions.
             </p>
         </section>
@@ -116,12 +115,21 @@
             </h2>
 
             <h3 class="jobs-occupation">
-                Front-end developer at
+                1). Front-end developer at
+                <span class="accent">Uniblog</span>
+            </h3>
+
+            <p class="jobs-time">
+                April 2022 - up to now (Part-time)
+            </p>
+
+            <h3 class="jobs-occupation">
+                2). Front-end developer at
                 <span class="accent">Freelance</span>
             </h3>
 
             <p class="jobs-time">
-                October 2020 - up to now
+                October 2020 - up to now (Part-time)
             </p>
 
             <ul class="experience">
@@ -140,10 +148,10 @@
             </ul>
 
             <h3 class="jobs-occupation">
-                Lighting Application Specialist and Chief Electrical Engineer at <span
+                3). Lighting Application Specialist and Chief Electrical Engineer at <span
                     class="accent">Centrsvet.by</span>
             </h3>
-            <p class="jobs-time">August 2016 - October 2020</p>
+            <p class="jobs-time">August 2016 - October 2020 (Full-time)</p>
             <ul class="experience">
                 <li class="experience-item">ABB, Jung, Berker, Hager, GIRA, Legrand, Casambi, Schneider Electric</li>
                 <li>
