--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="container">
     <aside class="left-side">
         <img
-                src="./images/photo1.jpg"
+                src="./images/photo2.jpg"
                 alt="My Photo"
                 width="370"
                 class="photo"
@@ -41,12 +41,12 @@
                 Tech skills
             </h2>
             <ul class="skills-list">
+                <li class="skills-item">Salesforce Developer</li>
                 <li class="skills-item">HTML & CSS</li>
-                <li class="skills-item">JavaScript</li>
-                <li class="skills-item">TypeScript</li>
+                <li class="skills-item">JavaScript/TypeScript</li>
                 <li class="skills-item">React & Redux</li>
                 <li class="skills-item">Material UI/Ant Design</li>
-                <li class="skills-item">Unit Tests/Storybook</li>
+                <li class="skills-item">Unit Tests</li>
                 <li class="skills-item">Axios/Rest API</li>
                 <li class="skills-item">SPA</li>
                 <li class="skills-item">TDD</li>
@@ -71,7 +71,7 @@
             <ul class="skills-list">
                 <li class="skills-item">Russian native</li>
                 <li class="skills-item">Polish A1 in progress</li>
-                <li class="skills-item">English A2 in progress</li>
+                <li class="skills-item">English B1 in progress</li>
             </ul>
         </section>
     </aside>
